<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <TextView
            style="@style/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="@string/selecione_seu_sexo"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonFeminino"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="15dp"
                    android:adjustViewBounds="false"
                    android:background="@drawable/btn_image"
                    android:elevation="10dp"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/simbolo_feminino" />

                <TextView
                    android:id="@+id/textViewFeminino"
                    style="@style/text_view_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feminino"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButtonMasculino"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="15dp"
                    android:adjustViewBounds="false"
                    android:background="@drawable/btn_image"
                    android:elevation="10dp"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/simbolo_masculino" />


                <TextView
                    android:id="@+id/textViewMasculino"
                    style="@style/text_view_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/peso"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextPeso"
            style="@style/editTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789.,"
            android:ems="10"
            android:hint="@string/hint_peso"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/altura"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextAltura"
            style="@style/editTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789.,"
            android:ems="10"
            android:hint="@string/hint_altura"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/buttonGoToResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/base_dark"
            android:drawableEnd="@drawable/ic_baseline_arrow_right_alt_24"
            android:drawableTint="@color/white"
            android:text="@string/calcular"
            android:textColor="@color/white"
            app:shapeAppearanceOverlay="@style/button_corner" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/detail_top"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/detail_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

</androidx.constraintlayout.widget.ConstraintLayout>